--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>MiniSite - Home</title>
   <link rel="stylesheet" href="style.css">
+  <!-- Favicon agregado -->
+  <link rel="icon" type="image/png" href="images/favicon.png">
 </head>
 <body>
   <div class="container">
@@ -23,23 +25,51 @@
       <h1>Welcome to MiniSite</h1>
     </header>
 
-    <!-- MAIN CONTENT -->
+    <!-- MAIN CONTENT con elementos del Capítulo 7 -->
     <main>
-      <div class="content-text">
-        <h2>Your First Website</h2>
-        <p>
-          This is a simple project created as practice for Web Development.  
-          Here I apply everything learned from Lab 1 through Lab 6, i made this website with dreams, blood, sweat and tears so please just enjoy it. 
-          
-        </p>
-        <p>
-          Use the menu on the left to explore the site 🚀
-        </p>
-      </div>
+      <section>
+        <article>
+          <h2>Your First Website</h2>
+          <p>
+            This project was created as part of my Web Development class.  
+            Here I’m applying everything learned from Labs 1 through 7 — including new semantic HTML5 elements like 
+            <code>&lt;article&gt;</code>, <code>&lt;section&gt;</code>, and <code>&lt;aside&gt;</code>.
+          </p>
 
-      <div class="content-image">
-        <img src="images/home.jpg" alt="Sample image">
-      </div>
+          <!-- Imagen principal con figura -->
+          <figure>
+            <img src="images/home.jpg" alt="Sample image" 
+                 style="opacity:0.9; box-shadow:0 4px 10px rgba(0,0,0,0.3); border-radius:8px;">
+            <figcaption style="font-size:0.9em; color:#555; margin-top:5px;">
+              Figure 1. MiniSite homepage layout using semantic elements.
+            </figcaption>
+          </figure>
+
+          <p>
+            Use the menu on the left to explore the site 🚀
+          </p>
+
+          <!-- Botón que lleva a Nutrition -->
+          <p>
+            <a href="nutrition.html" 
+               style="display:inline-block; padding:10px 15px; background:#333; color:#fff; border-radius:5px; 
+                      text-decoration:none; box-shadow:0 0 8px rgba(0,0,0,0.4);">
+              Go to Nutrition
+            </a>
+          </p>
+        </article>
+
+        <!-- Aside corregido (colores más legibles y nuevo texto) -->
+        <aside style="background:#e0ecf8; padding:12px; border-radius:8px; 
+                      box-shadow:0 2px 6px rgba(0,0,0,0.3); margin-top:15px; color:#222;">
+          <h3 style="color:#111; text-shadow:1px 1px 2px rgba(255,255,255,0.6); margin-top:0;">
+            Quick Tip 💡
+          </h3>
+          <p style="font-size:1em; color:#222;">
+            For every cup of rice, use two cups of water. Simple ratios make perfect results!
+          </p>
+        </aside>
+      </section>
     </main>
   </div>
 
