--- a/tables.html
+++ b/tables.html
@@ -16,7 +16,7 @@
         <li><a href="about.html">About</a></li>
         <li><a href="gallery.html">Gallery</a></li>
         <li><a href="nutrition.html">Nutrition</a></li>
-        <li><a href="ch8lab.html" class="active">Data Table</a></li>
+        <li><a href="tables.html" class="active">Data Table</a></li>
       </ul>
     </nav>
   </header>
