--- a/index.html
+++ b/index.html
@@ -5,27 +5,36 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>MiniSite - Home</title>
   <link rel="stylesheet" href="style.css">
-  <!-- Favicon agregado -->
   <link rel="icon" type="image/png" href="images/favicon.png">
 </head>
 <body>
   <div class="container">
-    <!-- NAVBAR -->
-    <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="about.html">About Us</a></li>
-        <li><a href="gallery.html">Gallery</a></li>
-        <li><a href="contact.html">Contact</a></li>
-      </ul>
-    </nav>
+    <!-- NAVBAR (cargada automáticamente) -->
+    <div id="nav-placeholder"></div>
+    <script>
+      // Cargar automáticamente el menú desde nav.html
+      fetch("nav.html")
+        .then(response => response.text())
+        .then(data => {
+          document.getElementById("nav-placeholder").innerHTML = data;
+
+          // Después de cargar el menú, marcar el enlace activo
+          const currentPage = window.location.pathname.split("/").pop();
+          const navLinks = document.querySelectorAll("nav a");
+          navLinks.forEach(link => {
+            if (link.getAttribute("href") === currentPage) {
+              link.classList.add("active");
+            }
+          });
+        });
+    </script>
 
     <!-- HEADER -->
     <header>
       <h1>Welcome to MiniSite</h1>
     </header>
 
-    <!-- MAIN CONTENT con elementos del Capítulo 7 -->
+    <!-- MAIN CONTENT -->
     <main>
       <section>
         <article>
@@ -36,7 +45,6 @@
             <code>&lt;article&gt;</code>, <code>&lt;section&gt;</code>, and <code>&lt;aside&gt;</code>.
           </p>
 
-          <!-- Imagen principal con figura -->
           <figure>
             <img src="images/home.jpg" alt="Sample image" 
                  style="opacity:0.9; box-shadow:0 4px 10px rgba(0,0,0,0.3); border-radius:8px;">
@@ -45,11 +53,8 @@
             </figcaption>
           </figure>
 
-          <p>
-            Use the menu on the left to explore the site 🚀
-          </p>
+          <p>Use the menu on the left to explore the site 🚀</p>
 
-          <!-- Botón que lleva a Nutrition -->
           <p>
             <a href="nutrition.html" 
                style="display:inline-block; padding:10px 15px; background:#333; color:#fff; border-radius:5px; 
@@ -59,7 +64,6 @@
           </p>
         </article>
 
-        <!-- Aside corregido (colores más legibles y nuevo texto) -->
         <aside style="background:#e0ecf8; padding:12px; border-radius:8px; 
                       box-shadow:0 2px 6px rgba(0,0,0,0.3); margin-top:15px; color:#222;">
           <h3 style="color:#111; text-shadow:1px 1px 2px rgba(255,255,255,0.6); margin-top:0;">
